# propuestas

./: main.py  products.txt  proposal.txt  propuestas.py  pyproject.toml  styles.css  template.html
static/: styles.css
templates/: base.html  proposal.html
templates/propuesta1/: proposal.html
templates/propuesta1/sections/: 03-descripcion.html  04,2-arquitectura_red_cableado.html  05-equipos_principales.html  06,3-calculos_diseno.html  07-spl.html  08-sti.html  09,1-calculos_cargas.html  10-resultados_spl_interior.html  16-conclusiones.html
templates/propuesta2/: proposal.html
templates/sections/: 01-cover.html  02-alcance.html  02-objetivo.html  03-descripcion.html  04,2-arquitectura_red_cableado.html  04-criterios_diseno.html  05,2-equipos_productos.html  05-criterios_diseno.html  05-equipos_principales.html  06,1-calculos_diseno.html  06,2-calculos_diseno.html  06,4-calculos_diseno.html  06,5-calculos_diseno.html  06-arquitectura_red_cableado.html  06-calculos_diseno.html  07,1-spl.html  07-equipos_principales.html  07-spl.html  08,1-sti.html  08-equipos_productos.html  08-sti.html  09,1-calculos_cargas.html  09,2-calculos_cargas.html  09,3-calculos_cargas.html  09,4-calculos_cargas.html  09,5-calculos_cargas.html  09,6-calculos_cargas.html  10-resultados_spl_interior.html  11-resultados_spl_exterior.html  12-mapas_spl.html  13-cargas_amplificacion.html  16-conclusiones.html  arquitectura_red_cableado.html  criterios_diseno.html  description.html  equipos_principales.html  equipos_productos.html  imagenes_spl.html  imagenes_sti.html  objetivo.html  (+3 more)
(+28 files in other folders)
