[project]
name = "propuestas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "playwright>=1.60.0",
]

[project.scripts]
propuestas = "propuestas:main"

[tool.setuptools]
py-modules = ["propuestas"]

